--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "dbushell",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "main": "index.js",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/dbushell/dbushell.git"
-  }
+  },
+  "files": [
+    "identity.json",
+    "index.js",
+    "package.json",
+    "README.md"
+  ]
 }
